--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "foundation",
   "version": "0.1.0",
+  "packageManager": "npm@9.6.7",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
