--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.544.0",
-    "react-scripts": "^0.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
